--- a/circle.html
+++ b/circle.html
@@ -87,10 +87,14 @@ opacity: 0;
     </style>
 </head>
 <body>
-<div class="wrap">
+<!-- <div class="wrap">
 <div class="circle"></div>
 <div class="top"></div>
 <div class="bottom"></div>
-</div>
+
+</div> -->
+<div style="font-size: 40px;height: 40px;border:solid 1px black">
+        123
+    </div>
 </body>
 </html>
