--- a/down.html
+++ b/down.html
@@ -26,7 +26,15 @@ div div { height:30px; line-height:30px; text-align:center; background-color:#FC
 </style>
 <div>
   <div id="a">下拉 </div>
-  <ul id="b" class="b">
+  <ul id="b" class="c">
+      <li>第一个</li>
+      <li>第二个</li>
+      <li>第三个</li>
+  </ul>
+</div>
+<div>
+  <div id="c">下拉 </div>
+  <ul id="d" class="b">
       <li>第一个</li>
       <li>第二个</li>
       <li>第三个</li>
