--- a/load.html
+++ b/load.html
@@ -81,6 +81,40 @@
   50% { transform: rotate(-140deg) }
   100% { transform: rotate(0) }
 }
+.icon1 {
+  color: rgba(232,21,46,0.8);
+  border-right: 0px solid transparent;
+  background: url("./img/ld_1.png");
+  background-size: contain;
+  -webkit-filter: drop-shadow(20px 0);
+  filter: drop-shadow(0px 0); 
+  width: 50px;
+  height: 50px;
+  -webkit-animation: clockwise 1500ms linear infinite;
+  animation: clockwise 1500ms linear infinite;
+}
+.icon2 {
+  
+  background: url("./img/ld_2.png");
+  background-size: contain;
+  color: rgba(232,21,46,0.8);
+  width: 22px;
+  height: 22px;
+  border-right: 0px solid transparent;
+  -webkit-filter: drop-shadow(0px 0);
+  filter: drop-shadow(0px 0); 
+  position: absolute;
+  top: 14px;
+    left: 14px;
+  /* color: rgba(232,21,46,0.8);
+  
+  -webkit-filter: drop-shadow(20px 0);
+  filter: drop-shadow(0px 0); 
+  width: 50px;
+  height: 50px; */
+  /* -webkit-animation: clockwise 1500ms linear infinite;
+  animation: clockwise 1500ms linear infinite; */
+}
   </style>
 </head>
 <body>
@@ -93,5 +127,12 @@
           <div class="pswp__preloader__donut"></div>
         </div>
       </div>
+      <div style="position:relative">
+        <div class="icon1">
+        
+        </div>
+        <div class="icon2"></div>
+      </div>
+     
 </body>
 </html>
