--- a/under.html
+++ b/under.html
@@ -50,6 +50,21 @@
 
     // 换一批老婆
     getWife("超越韦小宝的老婆");
+    function add(){
+        var args = [].slice.call(arguments);
+        var fn = function(){
+            var newArgs = args.concat([].slice.call(arguments));
+            return add.apply(null,newArgs);
+        } 
+       /*  fn.toString = function(){
+            return args.reduce(function(a, b) {
+                return a + b;
+            })
+        } */
+        return fn ;
+    }
+    //add(1)(2,3) //6
+    add(1)(2)(3)(4)(5) //15
    
   </script>
 </body>
