--- a/object.html
+++ b/object.html
@@ -7,6 +7,16 @@
   <title>Document</title>
 </head>
 <body>
-  
+  <script>
+  function rot13(str) {
+  return str.replace(/[a-zA-Z]/g, function(c) {
+                    return String.fromCharCode(
+                      (c <= 'Z' ? 90 : 122) >= (c = c.charCodeAt(0) + 13) ? c : c - 26
+                    );
+                });
+}
+var a = "abc";
+rot13(a);
+  </script>
 </body>
 </html>
