--- a/object.html
+++ b/object.html
@@ -31,6 +31,14 @@ function createObj2(name,age){
   this.age = age;
 }
 var obj = new createObj1("name","age")
+//原型模式
+function creatObj3(){
+
+}
+creatObj3.prototype.name = "name";
+creatObj3.prototype.age = "age";
+var obj = new creatObj3();
+
   </script>
 </body>
 </html>
