--- a/object.html
+++ b/object.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <script src="./js/under.js"></script>
   <title>Document</title>
 </head>
 <body>
@@ -50,7 +51,10 @@ console.log(Person.prototype.isPrototypeOf(person1))
 Object.getPrototypeOf(person1)==Person.prototype
 person1.hasOwnProperty("name")//false 来自原型
 person1.name="person"
-person1.hasOwnProperty("name")//true 来自实例
+person1.hasOwnProperty("name");//true 来自实例
+
+
+
   </script>
 </body>
 </html>
