--- a/object.html
+++ b/object.html
@@ -53,7 +53,21 @@ Object.getPrototypeOf(person1)==Person.prototype
 person1.hasOwnProperty("name")//false 来自原型
 person1.name="person"
 person1.hasOwnProperty("name");//true 来自实例
-
+//组合使用函数和原型模式
+function Person(name,age,job){
+  this.name = name;
+  this.age = age;
+  this.job = job;
+};
+Person.prototype = {
+  constructor : Person,
+  sayName : function(){
+    console.log(this.name)
+  }
+}
+var person1 = new Person("a","b","c")
+var person2 = new Person("a1","b1","c1")
+//动态原型模式
 
 var Vector = function (components) {
   let result = [...components];
