--- a/object.html
+++ b/object.html
@@ -68,6 +68,128 @@ Person.prototype = {
 var person1 = new Person("a","b","c")
 var person2 = new Person("a1","b1","c1")
 //动态原型模式
+function Person(name,age,job){
+  this.name = name;
+  this.age = age;
+  this.job = job;
+  if(typeof this.sayName != "function"){
+    Person.prototype.sayName = function(){
+      alert(this.name)
+    }
+  }
+}
+//寄生构造函数模式 想工程模式 但是用的是new 这样可以继承 o可以是数组 这样相当于在数组上新加方法
+function Person (name,age,job){
+  var o = new Object();
+  o.name = name;
+  return o
+}
+var person1 = new Person()
+//稳妥构造函数模式 不用new调用构造函数 函数里面不用this访问自身
+function Person (name,age,job){
+  var o = new Object();
+  o.sayName = function(){
+    alert(name)
+  }
+  return o
+}
+var person1 = Person("name","age","job")
+//继承
+//原型链继承
+function superType(){
+  this.property = true;
+}
+superType.prototype.getSuperValue = function(){
+  return this.property
+}
+function subType(){
+  this.subproperty = false;
+}
+subType.prototype = new superType()
+var instance = new subType();
+console.log(instance.getSuperValue()) //true
+ /**
+  * 存在的问题
+  * 1.父类的实例属性变成了子类的原型属性 比如继承父类中的引用类型 数组
+  * 2.创建子类的时候不能先父类的构造函数中传递参数
+  * **/
+//借用构造函数继承
+function superType(name){
+  this.name = name;
+}
+function subType(){
+  superType.call(this,"demo");
+  this.age = 29;
+}
+var instance = new subType();
+console.log(instance.name)//这样name属性是在父类定义的，子类可以修改属性而且不影响父类
+console.log(instance.age)
+//组合继承 用原型链搞定color用构造函数搞定name
+function superType(name){
+ this.name = name;
+ this.color = ["red"]
+}
+function subType(name,age){
+  superType.call(this,name);
+  this.age = age
+}
+var instance1 = new subType("demo",27) 
+var instance2 = new subType("white",29) 
+instance1.color.push("black");
+console.log(instance1)
+console.log(instance2)
+//原型式继承 其实就是浅拷贝返回
+function object(o){
+  function f(){
+
+  }
+  f.prototype = o;
+  return new f();
+}
+ /**
+  * es5有搞出了Object.create()方法规范
+  * **/
+ var pseron = {
+   name:"pink",
+   friends:["white","demo"]
+ }
+ var anotherPerson = Object.create(person,{
+   name:{
+     value:"Grey"
+   }
+ });
+
+//寄生式继承 类似寄生构建对象 不用new函数
+function createAnother(o){
+  var clone = Object(o);
+  clone.sayName = function(){
+    console.log("hi")
+  }
+  return clone
+}
+var person  = {
+  name:"pink"
+}
+var another = createAnother(person)
+//寄生组合式继承 即用寄生也用组合 
+/*
+组合式调用了两次superType()
+这样调用了一次
+
+*/
+function inherit(a,b){
+  var c = Object(b.prototype)
+  c.constructor = a;
+  a.prototype = c
+}
+function superType(name){
+  this.name = name
+}
+function subType(name){
+  superType.call(this,name)
+
+}
+inherit(subType,superType);
 
 var Vector = function (components) {
   let result = [...components];
