--- a/object.html
+++ b/object.html
@@ -135,7 +135,7 @@ function subType(name,age){
 }
 var instance1 = new subType("demo",27) 
 var instance2 = new subType("white",29) 
-instance1.color.push("black");
+//instance1.color.push("black");
 console.log(instance1)
 console.log(instance2)
 //原型式继承 其实就是浅拷贝返回
@@ -149,7 +149,7 @@ function object(o){
  /**
   * es5有搞出了Object.create()方法规范
   * **/
- var pseron = {
+ var person = {
    name:"pink",
    friends:["white","demo"]
  }
