--- a/object.html
+++ b/object.html
@@ -39,7 +39,8 @@ function creatObj3(){
 }
 creatObj3.prototype.name = "name";
 creatObj3.prototype.age = "age";
-var obj = new creatObj3();
+var obj =
+tObj3();
 function Person(){
   Person.prototype.name="name";
   Person.prototype.age="age";
