--- a/arithmetic.html
+++ b/arithmetic.html
@@ -1048,6 +1048,461 @@
                 [0, 0, 0, 3, 0, 2],
                 [0, 0, 0, 0, 0, 0]];
     //graph.dijkstra()
+
+
+
+
+    function ArrayList() {
+        var array = []
+        this.insert = function(item) {
+            array.push(item)
+        }
+        this.toString = function() {
+            return array.join()
+        }
+
+        this.bubbleSort = function() {
+            var length = array.length
+            for (var i = 0; i < length; i++) {
+                for (var j = 0; j < length; j++) {
+                    if (array[j] > array[j+1]) {
+                        swap(array, j, j+1)
+                    }
+                }
+            }
+        }
+        var swap = function(index1, index2) {
+            [array[index1], array[index2]] = [array[index2], array[index1]];
+            
+        }
+
+        this.selectionSort = function() {
+            var length = array.length,
+            indexMin;
+            for (var i = 0; i < length-1; i++) {
+                indexMin = 1
+                for (var j = 1; j < length; j++) {
+                    if (array[indexMin] > array[j]) {
+                        indexMin = j
+                    }
+                }
+                if (i != indexMin) {
+                    swap(i, indexMin)
+                }
+            }
+
+        }
+
+        this.insertionSort = function() {
+            var length = array.length,
+            j,
+            temp;
+            for (var i = 1; i < length; i++) {
+                j = 1 
+                temp = array[i]
+                while(j > 0 && array[j-1] > temp) {
+                    array[j] = array[j-1];
+                    j--
+                }
+                array[j] = temp
+            }
+        }
+
+        this.mergeSort = function() {
+            array = mergeSortRec(array)
+        }
+
+        var mergeSortRec = function(array) {
+            var length = array.length
+            if (length == 1) {
+                return array
+            }
+            var mid  = Math.floor(length/2),
+            left = array.slice(0, mid),
+            right = array.slice(mid, length);
+
+            return merge(mergeSortRec(left), mergeSortRec(right))
+
+        }
+
+        var merge = function (left, right) {
+            var result = [],
+            il = 0,
+            ir = 0;
+            while (il < left.length && ir < right.length) {
+                if (left[il] < right[ir]) {
+                    result.push(left[il++])
+                } else {
+                    result.push(right[ir++])
+                }
+            }
+
+            while (il < left.length) {
+                result.push(left[il++])
+            }
+            while (ir < right.length) {
+                result.push(right[ir++])
+            }
+
+            return result
+        }
+
+        this.quickSort = function(){
+            quick(array, 0, array.length - 1)
+        }
+
+        var quick = function(array, left, right) {
+            var index;
+            if (array.length > 1) {
+                index = partition(array, left, right)
+                if (left < index - 1) {
+                    quick(array, left, index - 1)
+                }
+                if (index < right) {
+                    quick(array, index, right)
+                }
+            }
+        }
+
+        var partition = function(array, left, right) {
+            var pivot = array[Math.floor((right + left) / 2)],
+            i = left,
+            j = right;
+            while (i <= j) {
+                while (array[i] < pivot) {
+                    i++
+                }
+                while (array[j] > pivot) {
+                    j--
+                }
+                if (i <= j) {
+                    swap(i,j)
+                    i++
+                    j--
+                }
+            }
+            return i
+        }
+
+        this.heapSort = function() {
+            var heapSize = array.length
+            buildHeap(array)
+            while(heapSize > 1) {
+                heapSize--
+                swap(0,heapSize);
+                heapify(array, heapSize, 0)
+            }
+        }
+
+        var buildHeap = function(array) {
+            var heapSize = array.length
+            for (var i = Math.floor(array.length / 2); i >= 0; i--) {
+                heapify(array, heapSize, i)
+            }
+        }
+
+        var heapify = function(array, heapSize, i) {
+            var left = i * 2 + 1,
+            right = i * 2 + 2,
+            largest = i;
+            if (left < heapSize && array[left] > array[largest]) {
+                largest = left
+            }
+            if (right < heapSize && array[right] > array[largest]) {
+                largest = right
+            }
+            if (largest !== i) {
+                swap(i, largest)
+                heapify(array, heapSize, largest)
+            }
+        }
+
+        this.sequentialSearch = function(item) {
+            for (var i = 0; i < array.length; i++) {
+                if (item === array[i]) {
+                    return i
+                }
+            }
+            return -1
+        }
+
+        this.binarySearch = function(item) {
+            this.quickSort()
+            var low = 0,
+            high = array.length - 1,
+            mid,
+            element;
+
+            while (low <= high) {
+                mid = Math.floor((low + high) / 2)
+                element = array[mid]
+                if (element < item) {
+                    low = mid + 1
+                } else if (element > item) {
+                    high = mid - 1
+                } else {
+                    return mid
+                }
+            }
+            return -1 
+        }
+
+    }
+
+    function createNonSortedArray(size) {
+        var array = new ArrayList()
+        for (var i = size; i > 0; i--)  {
+            array.insert(i)
+        }
+        return array
+    }
+
+    var array = createNonSortedArray(5); 
+    console.log(array.toString()); 
+    //array.bubbleSort(); 
+    //array.selectionSort();
+    //array.insertionSort();
+    //array.mergeSort()
+    //array.quickSort()
+    array.heapSort()
+    console.log(array.toString()); 
+
+    function fibonacci(num) {
+        if (num === 1 || num === 2) {
+            return 1
+        }
+        return fibonacci(num - 1) + fibonacci(num - 2)
+    }
+
+    function fib(num) {
+        var n1 = 1,
+        n2 = 1,
+        n = 1;
+        for (var i = 3; i <= num; i++) {
+            n = n1 + n2
+            n1 = n2
+            n2 = n
+        }
+        return n
+    }
+
+    function MinCoinChange(coins) {
+        var coins = coins
+        var cache = {}
+        
+        this.makeChange = function(amount) {
+            var me = this;
+            if (!amount) {
+                return []
+            }
+            if (cache[amount]) {
+                return cache[amount]
+            }
+            var min = [],
+            newMin,
+            newAmount;
+            for (var i = 0; i < coins.length; i++) {
+                var coin = coins[i]
+                newAmount = amount - coin;
+                if (newAmount >= 0) {
+                    newMin = me.makeChange(newAmount)
+                }
+                if (newAmount >= 0 && (newMin.length < min.length-1 || !min.length) && (newMin.length || !newAmount)) {
+                    min = [coin].concat(newMin)
+                    console.log('new min' + min + 'for' + amount + ';newMin:' + newMin)
+                }
+            }
+            console.log('cache',cache)
+            return (cache[amount] = min)
+        }
+    }
+    // var minCoinChange = new MinCoinChange([1, 5, 10, 25]);
+    // console.log(minCoinChange.makeChange(36));
+    var minCoinChange = new MinCoinChange([1, 3, 4, 25]);
+    console.log(minCoinChange.makeChange(6));
+
+    function knapSack(capacity, weights, values, n) {
+        var i, w, a, b, kS = [];
+        for (i = 0; i <= n; i++) {
+            kS[i] = []
+        }
+        for (i = 0; i <= n; i++) {
+            for (w = 0; w <= capacity; w++) {
+                if (i === 0 || w === 0) {
+                    kS[i][w] = 0
+                } else if (weights[i-1] <= w) {
+                    a = values[i-1] + kS[i-1][w-weights[i-1]];
+                    b = kS[i-1][w]
+                    kS[i][w] = (a > b) ? a : b
+                } else {    
+                    kS[i][w] = kS[i-1][w]
+                }
+            }
+        }
+        findValues(n, capacity, kS, weights, values)
+        return kS[n][capacity]
+    }
+
+    function findValues(n, capacity, kS, weights, values) {
+        var i = n, k = capacity;
+        console.log('解决方案包含以下物品:')
+        while (i > 0 && k > 0) {
+            if (kS[i][k] != kS[i-1][k]) {
+                console.log('物品' + i + '，重量' + weights[i-1] + '，价值' + values[i-1]);
+                i--;
+                k = k-kS[i][k]
+            } else {
+                i --
+            }
+        }
+    }
+    var values = [3, 4, 5],
+    weights = [2, 3, 4],
+    capacity = 5,
+    n = values.length;
+    console.log(knapSack(capacity, weights, values, n));
+
+    function lcs(wordX, wordY) {
+        var m = wordX.length,
+        n = wordY.length,
+        solution = [],
+        l = [],
+        i,
+        j,
+        a,
+        b;
+        for (i = 0; i <= m; i++) {
+            l[i] = []
+            solution[i] = [];
+            for (j = 0; j <= n; j++) {
+                l[i][j] = 0
+                solution[i][j] = '0';
+            }
+        }
+        for (i = 0; i <= m; i++) {
+            for (j = 0; j <= n; j++) {
+                if (i === 0 || j === 0) {
+                    l[i][j] = 0
+                } else if (wordX[i-1] == wordY[j-1]) {
+                    l[i][j] = l[i-1][j-1] + 1
+                    solution[i][j] = 'diagonal';
+                } else {
+                    a = l[i-1][j]
+                    b = l[i][j-1];
+                    l[i][j] = (a > b) ? a : b
+                    solution[i][j]=(l[i][j] == l[i-1][j]) ? 'top' : 'left';
+                }
+            }
+        }
+        //printSolution(solution, l, wordX, wordY, m, n);
+        return l[m][n]
+    }
+
+    function printSolution(solution, l, wordX, wordY, m, n) {
+        var a = m,
+        b = m,
+        i,
+        j,
+        x = solution[a][b],
+        answer = '';
+        while (x != '0') {
+            if (solution[a][b] === 'diagonal') {
+                answer = wordX[a-1] + answer
+                a--
+                b--
+            } else if (solution[a][b] === 'left') {
+                b--
+            } else if (solution[a][b] === 'top') {
+                a--
+            }
+            x = solution[a][b]
+        } 
+        console.log('lcs: ' + answer)
+    }
+    //lcs('abcdef','cde')
+    function matrixChainOrder(p, n) {
+        var i, j, k, l, q, m = [];
+        for (i = 1; i <= n; i++) {
+            m[i] = [];
+            m[i][i] = [];
+        }
+        var s = [];
+for (i = 0; i <= n; i++) {
+s[i] = [];
+for (j = 0; j <= n; j++) {
+s[i][j] = 0;
+}
+}
+        for (l = 2; l < n; l++) {
+            for (i = 1; i <= n-l+1; i++) {
+                j = i + l -1;
+                m[i][j]  = Number.MAX_SAFE_INTEGER;
+                for (k = i; k <= j-1; k++) {
+                    q = m[i][k] + m[k+1][j] + p[i-1]*p[k]*p[j]
+                    if (q < m[i][j]) {
+                        m[i][j] = q
+                        s[i][j] = k;
+                    }
+                }
+            }
+        }
+        printOptimalParenthesis(s, 1, n-1);
+        return m[1][n-1]
+    }
+    function printOptimalParenthesis(s, i, j) {
+        if (i == j) {
+            console.log("A[" + i + "]");
+        } else {
+            console.log("(");
+            printOptimalParenthesis(s, i, s[i][j]);
+            printOptimalParenthesis(s, s[i][j] + 1, j);
+            console.log(")");
+        }
+    }
+    var p = [10, 100, 5, 50, 1],
+    n = p.length;
+    console.log(matrixChainOrder(p, n));
+
+    function MinCoinChanges(coins) {
+        var coins = coins
+        this.makeChange = function(amount) {
+            var change = [],
+            total = 0;
+            for (var i = coins.length; i>=0; i--) {
+                var coin = coins[i]
+                while (total + coin <= amount) {
+                    change.push(coin);
+                    total += coin
+                }
+            }
+            return change
+        }
+    }
+    var minCoinChanges = new MinCoinChanges([1, 15, 20, 40]);
+    console.log(minCoinChanges.makeChange(44));
+
+    function knapSacks(capacity, values, weights) {
+        var n = values.length,
+        load = 0,
+        i = 0,
+        val = 0;
+
+        for (i = 0; i < n && load <capacity; i++) {
+            if (weights[i] <= (capacity - load)) {
+                val += values[i]
+                load += weights[i]
+            } else {
+                var r = (capacity - load) / weights[i]
+                val += r * values[i]
+                load += weights[i]
+            }
+        }
+        //return w
+    }
+    var values = [3, 4, 5],
+    weights = [2, 3, 4],
+    capacity = 5;
+    console.log(knapSacks(capacity, weights, values));
     </script>
 </body>
-</html>
+</html>  
